--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,65 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+}
+
+
+.main {
+  width: 320px;
+  height: 480px;
+  position: relative;
+  box-shadow: 5px 5px 20px 1px #666;
+}
+
+/*form*/
+
+.heading {
+  font-weight: bold;
+  margin-top: -10px;
+  font-size: 38px;
+  text-align: center;
+  color: rgba(2, 225, 139, 1.0);
+}
+
+.google_box {
+  text-align: center;
+  margin-top: -20px;
+}
+
+.btn_style {
+  margin-top: 20px;
+  font-weight: 500;
+  color: rgba(2, 225, 139, 1.0);
+}
+
+.btn-light:hover {
+  background-color: rgba(2, 225, 139, 0.9);
+  border-color: rgba(2, 225, 139, 0.5);
+}
+
+label {
+  /*font-weight: bold;*/
+  font-size: 18px;
+  color: rgba(2, 225, 139, 1.0);
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.form-control {
+  border-radius: 15px;
+
+}
+
+.form-check-input {
+  margin-top: 15px;
+}
+
+.signout {
+  position: fixed;
+  top: 5px;
+  right: 5px;
+  z-index: 10;
 }
